--- a/.github/workflows/l10n_extract.yaml
+++ b/.github/workflows/l10n_extract.yaml
@@ -36,15 +36,23 @@ jobs:
         run: |
           cd fxa-code
           _scripts/l10n/clone.sh
+
+          # Create ftls for yarn workspaces
           yarn workspaces focus fxa-content-server fxa-auth-server fxa-payments-server fxa-settings
           yarn workspace fxa-payments-server grunt merge-ftl
           yarn workspace fxa-settings grunt merge-ftl
           yarn workspace fxa-auth-server grunt merge-ftl
           yarn workspace fxa-react grunt merge-ftl
+        
+          # Create ftls for nx apps
           npx grunt --gruntfile='apps/payments/next/Gruntfile.js' merge-ftl
+          
+          # Create ftls for nx libs
+          npx grunt --gruntfile='libs/accounts/email-renderer/gruntfile.js' l10n-merge
 
           NODE_ENV=development ../fxa-l10n/scripts/extract_strings.sh \
-            --mailer-repo ./packages/fxa-auth-server \
+            --mailer-repo ./libs/accounts/email-renderer \
+            --auth-repo ./packages/fxa-auth-server \
             --payments-repo ./packages/fxa-payments-server \
             --payments-next-repo ./apps/payments/next \
             --content-repo ./packages/fxa-content-server \
